vlib/v/checker/tests/struct_multi_return_field_err.vv
struct Tuple{
	data (int, int)
}

fn main() {
	x := Tuple{}
	println(x)
}
